# cargo-i18n

./: .gitignore  .typos.toml  Cargo.toml  LICENSE  README.md  i18n.toml
.github/workflows/: rust.yml
cargo-i18n-lib/: Cargo.toml
cargo-i18n-lib/src/: config.rs
cargo-i18n-lib/src/gettext/: mod.rs
examples/iced-fluent/: Cargo.toml  i18n.toml
examples/iced-fluent/i18n/en-US/: iced_fluent.ftl
examples/iced-fluent/i18n/fr/: iced_fluent.ftl
examples/iced-fluent/i18n/ru/: iced_fluent.ftl
examples/iced-fluent/src/: localize.rs  main.rs
examples/library-fluent/: Cargo.toml  README.md  i18n.toml
examples/library-fluent/i18n/fr/: library_fluent.ftl
examples/library-fluent/src/: lib.rs
examples/library-fluent/tests/: no_localizer.rs
i18n/: TRANSLATORS
i18n-build/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  i18n.toml
i18n-build/i18n/: TRANSLATORS
i18n-build/i18n/mo/fr/: i18n_build.mo
i18n-build/i18n/mo/ru/: i18n_build.mo
i18n-build/i18n/po/fr/: i18n_build.po
i18n-build/i18n/po/ru/: i18n_build.po
i18n-build/src/: config.rs  error.rs  lib.rs  util.rs  watch.rs
i18n-build/src/gettext/: mod.rs
i18n-build/src/gettext_impl/: mod.rs
i18n-config/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
i18n-config/src/: fluent.rs  gettext.rs  lib.rs
i18n-embed/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  i18n.toml
i18n-embed-fl/: CHANGELOG.md  Cargo.toml  README.md  i18n.toml
i18n-embed-fl/examples/web-server/: Cargo.toml  i18n.toml
i18n-embed-fl/examples/web-server/i18n/de-DE/: web_server.ftl
i18n-embed-fl/examples/web-server/i18n/ka-GE/: web_server.ftl
i18n-embed-fl/examples/web-server/src/: main.rs
i18n-embed-fl/i18n/en-US/: i18n_embed_fl.ftl
i18n-embed-fl/src/: lib.rs
i18n-embed-fl/tests/: fl_macro.rs
i18n-embed/examples/custom-config-path/: Cargo.toml
i18n-embed/examples/custom-config-path/misc/: i18n.toml
i18n-embed/examples/custom-config-path/src/: lib.rs
i18n-embed/examples/desktop-bin/: Cargo.toml  README.md
i18n-embed/examples/desktop-bin/src/: main.rs
i18n-embed/examples/library-fluent/: Cargo.toml
i18n-embed/examples/library-fluent/i18n/en/: library_fluent.ftl
i18n-embed/examples/library-fluent/i18n/eo/: library_fluent.ftl
i18n-embed/examples/library-fluent/src/: lib.rs
i18n-embed/examples/library-fluent/tests/: with_localizer.rs
i18n-embed/i18n-embed-impl/: Cargo.toml
i18n-embed/i18n-embed-impl/src/: lib.rs
i18n-embed/i18n/ftl/en-GB/: test.ftl
i18n-embed/i18n/ftl/en-US/: .gitattributes  test.ftl
i18n-embed/i18n/ftl/ru/: .gitattributes  test.ftl
i18n-embed/i18n/mo/: README.md
i18n-embed/i18n/mo/es/: i18n_embed.mo
i18n-embed/i18n/mo/fr/: i18n_embed.mo
i18n-embed/i18n/mo/ru/: i18n_embed.mo
i18n-embed/i18n/po/es/: i18n_embed.po
i18n-embed/i18n/po/fr/: i18n_embed.po
i18n-embed/i18n/po/ru/: i18n_embed.po
i18n-embed/src/: assets.rs  fluent.rs  fluent_multi.rs  gettext.rs  lib.rs  requester.rs  traits.rs.bak  util.rs
i18n-embed/src/fluent/: mod.rs  multi.rs
i18n-embed/tests/: loader.rs
i18n/mo/de/: cargo_i18n.mo
i18n/mo/fr/: cargo_i18n.mo
i18n/mo/ru/: cargo_i18n.mo  i18n_build.mo
i18n/po/de/: cargo_i18n.po
i18n/po/fr/: cargo_i18n.po
i18n/po/ge/: cargo_i18n.po
i18n/po/ru/: cargo-i18n.po  cargo_i18n.po  i18n_build.po
src/: config.rs  error.rs  lib.rs  main.rs  util.rs  watch.rs
src/gettext/: mod.rs
