[package]
name = "cargo-i18n"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"
description = "Cargo sub-command to extract and build localization resources"
keywords = ["cargo", "build", "i18n", "gettext", "locale"]
license = "MIT"
categories = ["development-tools::cargo-plugins", "localization", "internationalization", "development-tools::build-utils"]
readme = "README.md"
repository = "https://github.com/kellpossible/cargo-i18n"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i18n-embed = { path = "./i18n-embed", features = ["desktop-requester"] }
i18n-build = { path = "./i18n-build", features = ["localize"] }
i18n-config = { path = "./i18n-config" }
anyhow = "1.0"
gettext = "0.4"
tr = { version = "0.1", default-features = false, features = ["gettext"] }
unic-langid = "0.8.0"
clap = "2.33.0"
rust-embed = "5"
env_logger = "0.7.1"
log = "0.4"