[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
categories = ["development-tools::cargo-plugins", "localization", "internationalization", "development-tools::build-utils"]
description = "Cargo sub-command to extract and build localization resources to embed in your application/library"
edition = "2018"
keywords = ["cargo", "build", "i18n", "gettext", "locale"]
license = "MIT"
name = "cargo-i18n"
readme = "README.md"
repository = "https://github.com/kellpossible/cargo-i18n"
version = "0.2.5"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i18n-embed = { version = "0.11", path = "./i18n-embed", features = ["desktop-requester", "gettext-system", "fluent-system"] }
i18n-build = { version = "0.6", path = "./i18n-build", features = ["localize"] }
i18n-config = { version = "0.4", path = "./i18n-config" }
anyhow = "1.0"
gettext = "0.4"
tr = { version = "0.1", default-features = false, features = ["gettext"] }
clap = "2.33"
rust-embed = "5"
unic-langid = "0.9"
env_logger = "0.8"
log = "0.4"
lazy_static = "1.4.0"

[dev-dependencies]
doc-comment = "0.3"

[workspace]

members = [
    "i18n-build",
    "i18n-config",
    "i18n-embed",
    "i18n-embed-fl",

    # Examples
    "i18n-embed/examples/library-fluent",
    "i18n-embed/examples/bin",
]