[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
categories = ["development-tools::cargo-plugins", "localization", "internationalization", "development-tools::build-utils"]
description = "Cargo sub-command to extract and build localization resources to embed in your application/library"
edition = "2018"
keywords = ["cargo", "build", "i18n", "gettext", "locale"]
license = "MIT"
name = "cargo-i18n"
readme = "README.md"
repository = "https://github.com/kellpossible/cargo-i18n"
version = "0.2.13"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i18n-embed = { workspace = true, features = ["desktop-requester", "gettext-system", "fluent-system"] }
i18n-build = { workspace = true, features = ["localize"] }
i18n-config = { workspace = true }
anyhow = { workspace = true }
gettext = { workspace = true }
tr = { workspace = true, default-features = false, features = ["gettext"] }
clap = { version = "4.4.5", features = ["cargo"] }
rust-embed = { workspace = true } 
unic-langid = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
doc-comment = { workspace = true }

[workspace]

members = [
    "i18n-build",
    "i18n-config",
    "i18n-embed",
    "i18n-embed-fl",

    # Examples
    "i18n-embed/examples/library-fluent",
    "i18n-embed/examples/desktop-bin",
    "i18n-embed-fl/examples/web-server",
]

[workspace.dependencies]
rust-embed = "8.0"
i18n-build = { version = "0.10.0", path = "./i18n-build" }
i18n-embed = { version = "0.15.0", path = "./i18n-embed" }
i18n-config = { version = "0.4.7", path = "./i18n-config" }
i18n-embed-fl = { version = "0.9.1", path = "./i18n-embed-fl" }
thiserror = "1.0"
log = "0.4"
unic-langid = "0.9"
lazy_static = "1.4.0"
anyhow = "1.0"
gettext = "0.4"
tr = "0.1"
doc-comment = "0.3"
env_logger = "0.11"
fluent = "0.16"
fluent-syntax = "0.11"
fluent-langneg = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
find-crate = "0.6"
syn = "2.0"
pretty_assertions = "1.4"
walkdir = "2.4"
serde = "1.0"
serde_derive = "1.0"
once_cell = "1.18"
