[package]
name = "i18n-build"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"
repository = "https://github.com/kellpossible/cargo-i18n"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2"
anyhow = "1"
thiserror = "1"
tr = { version = "0.1", default-features = false, features = ["gettext"] }
walkdir = "2"
i18n-embed = { path = "../i18n-embed", features = ["desktop-requester"], optional = true }
i18n-config = { path = "../i18n-config" }
gettext = { version = "0.4", optional = true }
log = "0.4"
rust-embed = "5"

[features]
default = []

# A feature to localize this library
localize = ["i18n-embed", "gettext"]