[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
categories = ["localization", "internationalization", "development-tools::build-utils"]
description = "Designed for use within the cargo-i18n tool for localizing crates. It has been published to allow its direct use within project build scripts if required."
edition = "2018"
keywords = ["script", "build", "i18n", "gettext", "locale"]
license = "MIT"
name = "i18n-build"
readme = "README.md"
repository = "https://github.com/kellpossible/cargo-i18n/tree/master/i18n-build"
version = "0.3.0"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
subprocess = "0.2"
anyhow = "1"
thiserror = "1"
tr = { version = "0.1", default-features = false, features = ["gettext"] }
walkdir = "2"
i18n-embed = { version = "0.3", path = "../i18n-embed", features = ["desktop-requester"], optional = true }
i18n-config = { version = "0.2", path = "../i18n-config" }
gettext = { version = "0.4", optional = true }
log = "0.4"
rust-embed = "5"

[features]
default = []

# A feature to localize this library
localize = ["i18n-embed", "gettext"]