[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
categories = ["localization", "internationalization", "development-tools::build-utils"]
description = "Designed for use within the cargo-i18n tool for localizing crates. It has been published to allow its direct use within project build scripts if required."
edition = "2018"
keywords = ["script", "build", "i18n", "gettext", "locale"]
license = "MIT"
name = "i18n-build"
readme = "README.md"
repository = "https://github.com/kellpossible/cargo-i18n/tree/master/i18n-build"
version = "0.9.0"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
subprocess = "0.2"
anyhow = { workspace = true }
thiserror = { workspace = true } 
tr = { workspace = true, default-features = false, features = ["gettext"] }
walkdir = { workspace = true }
i18n-embed = { workspace = true, features = ["gettext-system", "desktop-requester"], optional = true }
i18n-config = { workspace = true }
gettext = { workspace = true, optional = true }
log = { workspace = true }
rust-embed = { workspace = true }
lazy_static = { workspace = true, optional = true }

[features]
default = []

# A feature to localize this library
localize = ["i18n-embed", "gettext", "lazy_static"]
