[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
categories = ["localization", "internationalization"]
description = "This library contains the configuration stucts (along with their parsing functions) for the cargo-i18n tool/system."
edition = "2018"
keywords = ["cargo", "build", "i18n", "gettext", "locale"]
license = "MIT"
name = "i18n-config"
readme = "README.md"
repository = "https://github.com/kellpossible/cargo-i18n/tree/master/i18n-config"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
thiserror = "1"
unic-langid = { version = "0.9", features = ["serde"] }