[package]
name = "i18n-embed-fl"
description = "Macro to perform compile time checks when using the i18n-embed crate and the fluent localization system"
categories = ["localization", "internationalization", "development-tools"]
version = "0.6.7"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
dashmap = "^5.1"
find-crate = "0.6"
fluent = "0.16"
fluent-syntax = "0.11"
i18n-config = { path = "../i18n-config", version = "0.4" }
i18n-embed = { path = "../i18n-embed", version = "0.13.5", features = ["fluent-system", "filesystem-assets"]}
lazy_static = "1.4"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
strsim = "0.10"
unic-langid = "0.9"

[dependencies.syn]
version = "2.0"
default-features = false
features = ["derive", "proc-macro", "parsing", "printing", "extra-traits", "full"]

[dev-dependencies]
doc-comment = "0.3"
env_logger = "0.10"
pretty_assertions = "1.1"
rust-embed = "^6.3"
