[package]
name = "i18n-embed-fl"
description = "Macro to perform compile time checks when using the i18n-embed crate and the fluent localization system"
categories = ["localization", "internationalization", "development-tools"]
version = "0.8.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
dashmap = "^5.1"
find-crate = { workspace = true }
fluent = { workspace = true }
fluent-syntax = { workspace = true }
i18n-config = { workspace = true }
i18n-embed = { workspace = true, features = ["fluent-system", "filesystem-assets"]}
lazy_static = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-error = "1.0"
quote = { workspace = true }
strsim = "0.10"
unic-langid = { workspace = true }

[dependencies.syn]
workspace = true
default-features = false
features = ["derive", "proc-macro", "parsing", "printing", "extra-traits", "full"]

[dev-dependencies]
doc-comment = { workspace = true }
env_logger = { workspace = true }
pretty_assertions = { workspace = true }
rust-embed = { workspace = true }
