[package]
name = "i18n-embed-fl"
description = "Macro to perform compile time checks when using the i18n-embed crate and the fluent localization system"
categories = ["localization", "internationalization", "development-tools"]
version = "0.9.3"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
dashmap = { version = "6.0", optional = true }
find-crate = { workspace = true }
fluent = { workspace = true }
fluent-syntax = { workspace = true }
i18n-config = { workspace = true }
i18n-embed = { workspace = true, features = ["fluent-system", "filesystem-assets"]}
proc-macro2 = { workspace = true }
proc-macro-error2 = "2.0.1"
quote = { workspace = true }
strsim = "0.11"
unic-langid = { workspace = true }

[dependencies.syn]
workspace = true
features = ["derive", "proc-macro", "parsing", "printing", "extra-traits", "full"]

[dev-dependencies]
doc-comment = { workspace = true }
env_logger = { workspace = true }
pretty_assertions = { workspace = true }
rust-embed = { workspace = true }

[features]
# Uses dashmap implementation for `fl!()` macro lookups.
dashmap = ["dep:dashmap"]