[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
categories = ["localization", "internationalization", "development-tools::build-utils", "wasm"]
description = "Traits and macros to conveniently embed the output of cargo-i18n into your application binary in order to localize it at runtime."
edition = "2018"
exclude = ["i18n/", "i18n.toml"]
keywords = ["embed", "macro", "i18n", "gettext", "locale"]
license = "MIT"
name = "i18n-embed"
readme = "README.md"
repository = "https://github.com/kellpossible/cargo-i18n/tree/master/i18n-embed"
version = "0.7.0"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
i18n-embed-impl = { version = "0.5", path = "./i18n-embed-impl" }
unic-langid = "0.9"
locale_config = { version = "0.3", optional = true }
fluent-langneg = "0.13"
web-sys = { version = "0.3", features = ["Window", "Navigator"], optional = true }
rust-embed = "5"
gettext = { version = "0.4", optional = true }
tr = { version = "0.1", default-features = false, optional = true }
log = "0.4"
thiserror = "1"
fluent = { version = "0.12", optional = true }
lazy_static = "1.4"
parking_lot = { version = "0.11", optional = true }

[dev-dependencies]
doc-comment = "0.3"

[features]
default = ["gettext-system"]

gettext-system = ["tr", "tr/gettext", "gettext", "parking_lot"]
fluent-system = ["fluent", "parking_lot"]

desktop-requester = ["locale_config"]
web-sys-requester = ["web-sys"]
