[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
categories = ["localization", "internationalization", "development-tools::build-utils", "wasm"]
description = "Traits and macros to conveniently embed the output of cargo-i18n into your application binary in order to localize it at runtime."
edition = "2018"
exclude = ["i18n/", "i18n.toml"]
keywords = ["embed", "macro", "i18n", "gettext", "fluent"]
license = "MIT"
name = "i18n-embed"
readme = "README.md"
repository = "https://github.com/kellpossible/cargo-i18n/tree/master/i18n-embed"
version = "0.8.4"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
fluent = { version = "0.12", optional = true }
fluent-langneg = "0.13"
fluent-syntax = { version = "0.9", optional = true }
gettext_system = { package = "gettext", version = "0.4", optional = true }
i18n-embed-impl = { version = "0.6", path = "./i18n-embed-impl", optional = true }
lazy_static = "1.4"
locale_config = { version = "0.3", optional = true }
log = "0.4"
parking_lot = { version = "0.11", optional = true }
rust-embed = { version = "5", optional = true }
thiserror = "1"
tr = { version = "0.1", default-features = false, optional = true }
unic-langid = "0.9"
walkdir = { version = "2", optional = true }
web-sys = { version = "0.3", features = ["Window", "Navigator"], optional = true }

[dev-dependencies]
doc-comment = "0.3"
env_logger = "0.7"
maplit = "1.0"
pretty_assertions = "0.6"

[features]
default = ["rust-embed"]

gettext-system = ["tr", "tr/gettext", "gettext_system", "parking_lot", "i18n-embed-impl", "i18n-embed-impl/gettext-system"]
fluent-system = ["fluent", "fluent-syntax", "parking_lot", "i18n-embed-impl", "i18n-embed-impl/fluent-system"]

desktop-requester = ["locale_config"]
web-sys-requester = ["web-sys"]

filesystem-assets = ["walkdir"]
