[package]
name = "iced-fluent"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i18n-embed = { path = "../../i18n-embed", default-features = false, features = ["fluent-system", "desktop-requester", "rust-embed"] }
i18n-embed-fl = { path = "../../i18n-embed-fl" }
iced = { version = "0.2", default-features = false, features = ["glow"] }
lazy_static = "1.4"
rust-embed = "5.6"
unic-langid = "0.9"