[package]
name = "library-fluent"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i18n-embed = { path = "../../i18n-embed", features = ["fluent-system"] }
i18n-embed-fl = { path = "../../i18n-embed-fl" }
once_cell = "1.5"
rust-embed = "5.9"