[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
description = "Derive macros for the traits defined in i18n-embed"
edition = "2018"
keywords = ["embed", "build", "i18n", "gettext", "locale"]
license = "MIT"
name = "i18n-embed-impl"
readme = "../README.md"
repository = "https://github.com/kellpossible/cargo-i18n/tree/master/i18n-embed"
version = "0.5.1"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
find-crate = { git = "https://github.com/kellpossible/find-crate.git", branch = "manifest-crate-package", version = "0.5", optional = true }
i18n-config = { version = "0.3", path = "../../i18n-config", optional = true }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"

[dev-dependencies]
rust-embed = "5.6"

[dependencies.syn]
version = "1.0"
default-features = false
features = ["derive", "proc-macro", "parsing", "printing", "extra-traits",]

[features]
default = []
gettext-system = ["i18n-config", "find-crate"]
fluent-system = ["i18n-config", "find-crate"]
