[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
description = "Macro implementations for i18n-embed"
edition = "2018"
keywords = ["build", "i18n", "gettext", "locale", "fluent"]
categories = ["localization", "internationalization"]
license = "MIT"
name = "i18n-embed-impl"
readme = "../README.md"
repository = "https://github.com/kellpossible/cargo-i18n/tree/master/i18n-embed"
version = "0.8.2"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
find-crate = { workspace = true, optional = true }
i18n-config = { workspace = true, optional = true }
proc-macro2 = { workspace = true }
quote = { workspace = true, optional = true }

[dev-dependencies]
rust-embed = { workspace = true }

[dependencies.syn]
workspace = true
default-features = false
features = ["derive", "proc-macro", "parsing", "printing", "extra-traits",]

[features]
default = []
gettext-system = ["i18n-config", "find-crate", "quote"]
fluent-system = ["i18n-config", "find-crate", "quote"]
