[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i18n-embed = { path = "../../../i18n-embed", features = ["fluent-system"] }
i18n-embed-fl = { path = "../../" }
rust-embed = "6.4.2"
once_cell = "1.17.0"
unic-langid = "0.9.1"
