[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i18n-embed = { workspace = true, features = ["fluent-system"] }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
once_cell = { workspace = true }
unic-langid = { workspace = true }
