[package]
name = "bin"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library-fluent = { path = "../library-fluent/" }
i18n-embed = { workspace = true, features = ["fluent-system", "desktop-requester"]}
env_logger = "0.11.3"
